test/files/neg/abstract-report.scala
class Unimplemented extends scala.collection.IterableOps[String, List, List[String]] { }
